--- a/index.html
+++ b/index.html
@@ -386,19 +386,19 @@
           <h3>All Countries</h3>
           <p>Pay with credit card, PayPal, or cryptocurrency through our secure payment platform.</p>
           <p style="font-size:24px;color:var(--accentA);font-weight:bold;margin:15px 0;">$3.99</p>
-          <p><a href="https://wow.mysellauth.com" target="_blank" style="background:linear-gradient(90deg,var(--accentA),var(--accentB));padding:12px 24px;border-radius:8px;text-decoration:none;color:#fff;font-weight:bold;">Buy Now - USA</a></p>
+          <p><a href="https://funpay.com/lots/offer?id=41721462" target="_blank" style="background:linear-gradient(90deg,var(--accentA),var(--accentB));padding:12px 24px;border-radius:8px;text-decoration:none;color:#fff;font-weight:bold;">Buy Now - USA</a></p>
         </div>
         <div class="feature-card premium">
           <h3>Russia</h3>
           <p>Оплата в рублях через безопасную платформу. Поддержка карт РФ и популярных платежных систем.</p>
           <p style="font-size:24px;color:var(--accentA);font-weight:bold;margin:15px 0;">340₽</p>
-          <p><a href="https://funpay.com/users/9085034/" target="_blank" style="background:linear-gradient(90deg,var(--accentA),var(--accentB));padding:12px 24px;border-radius:8px;text-decoration:none;color:#fff;font-weight:bold;">Купить - RUB</a></p>
+          <p><a href="https://funpay.com/lots/offer?id=41721462" target="_blank" style="background:linear-gradient(90deg,var(--accentA),var(--accentB));padding:12px 24px;border-radius:8px;text-decoration:none;color:#fff;font-weight:bold;">Купить - RUB</a></p>
         </div>
         <div class="feature-card">
           <h3>🎮 Robux</h3>
           <p>Pay using Roblox Robux in-game currency purchase. Perfect for younger users.</p>
-          <p style="font-size:24px;color:var(--accentA);font-weight:bold;margin:15px 0;">900 R$</p>
-          <p><a href="https://roblox.com/123" target="_blank" style="background:linear-gradient(90deg,rgba(76,175,80,0.8),rgba(139,195,74,0.8));padding:12px 24px;border-radius:8px;text-decoration:none;color:#fff;font-weight:bold;">Pay with Robux</a></p>
+          <p style="font-size:24px;color:var(--accentA);font-weight:bold;margin:15px 0;">750 R$</p>
+          <p><a href="https://www.roblox.com/game-pass/1414506021/donate-me" target="_blank" style="background:linear-gradient(90deg,rgba(76,175,80,0.8),rgba(139,195,74,0.8));padding:12px 24px;border-radius:8px;text-decoration:none;color:#fff;font-weight:bold;">Pay with Robux</a></p>
         </div>
       </div>
     </div>
@@ -500,3 +500,4 @@
   </script>
 </body>
 </html>
+
