--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         </div>
       </div>
       <a class="cta" href="#purchase">Get Started</a>
-      <div class="scroll-indicator">Scroll down to explore ↓</div>
+      <div class="scroll-indicator">Листайте вниз чтобы увидеть все ↓</div>
     </section>
 
     <!-- About Section -->
